styling about section

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -31,9 +31,11 @@
     </div>
     <div class="about">
         <h1>About</h1>
-        <div><h2>Martin Peña</h2><a href="https://github.com/andres-martin">andres-martin</a></div>
-        <div><h2>Andres Lopez</h2><a href="https://github.com/klupzor">klupzor</a></div>
-        <div><h2>Maria Alejandra Coy</h2><a href="https://github.com/macoyulloa">macoyulloa</a></div>
+        <div class="members">
+            <div><h2>Martin Peña</h2><a href="https://github.com/andres-martin">andres-martin</a></div>
+            <div><h2>Andres Lopez</h2><a href="https://github.com/klupzor">klupzor</a></div>
+            <div><h2>Maria Alejandra Coy</h2><a href="https://github.com/macoyulloa">macoyulloa</a></div>
+        </div>
     </div>
     <div class="login">
         <form action="https://api-jwt-v3.herokuapp.com" id="myForm">
